Fix #1. Added favicon and scrollbar gutter.
Fixed issue with appearing vertical scrollbar (unwanted layout changes)

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
   background-color: rgb(252, 233, 136);
 }
 
+body {
+  scrollbar-gutter: stable both-edges;
+}
+
 a {
   text-decoration: none;
 }
